fixed background elements on safari

--- a/style.css
+++ b/style.css
@@ -240,6 +240,7 @@ section h1 {
     font-weight: 400;
     text-align: center;
     font-size: 50px;
+    z-index: 99;
 }
 
 .aboutContainer {
@@ -352,10 +353,10 @@ section h1 {
     border-radius: 50%;
     position: absolute;
     right: 50%;
-    z-index: -10;
-    filter: blur(300px);
+    z-index: -100;
+    filter: blur(100px);
     overflow: hidden;
-    max-width: 100%;
+    will-change: transform;
 }
 
 .circles2 {
@@ -366,9 +367,10 @@ section h1 {
     position: absolute;
     right: 50%;
     z-index: -100;
-    filter: blur(300px);
+    filter: blur(100px);
     overflow: hidden;
     max-width: 100%;
+    will-change: transform;
 }
 
 .circles3 {
@@ -379,9 +381,10 @@ section h1 {
     position: absolute;
     right: 10%;
     z-index: -100;
-    filter: blur(300px);
+    filter: blur(100px);
     overflow: hidden;
     max-width: 100%;
+    will-change: transform;
 }
 
 
